Tue May 18 23:14:28 CEST 2004 (tk)
----------------------------------
  V 0.71

Tue May 18 22:36:43 CEST 2004 (tk)
----------------------------------
  * docs: include German clamdoc.pdf translation (Rupert Roesler-Schmidt and
	  Karina Schwarz, uplink coherent solutions, http://www.uplink.at)
  * docs: update

Sun May 16 09:25:37 BST 2004 (njh)
----------------------------------
  * clamav-milter:	Up issue

Sun May 16 03:00:45 CEST 2004 (tk)
----------------------------------
  * clamd: fix logging wording in poll() error message (Joe Maimon
	   <jmaimon*ttec.com>)
  * configure: improve tcpwrappers compilation test

Fri May 14 09:16:12 BST 2004 (njh)
----------------------------------
  * libclamav/mbox.c:	Use mkstemp() on Cygwin

Thu May 13 02:22:50 CEST 2004 (tk)
----------------------------------
  * libclamav: move putenv(TMPDIR) code from clamd to cl_settempdir()
  * clamd: new directive LeaveTemporaryFiles (Debug no longer leaves temporary
	   files not removed)
  * clamscan: respect --tempdir in libclamav; add --leave-temps

Wed May 12 15:25:47 BST 2004 (trog)
-----------------------------------
  * libclamav/vba_extract.c: fix error path bug (spotted by Tomasz Klim)

Wed May 12 12:20:50 BST 2004 (njh)
----------------------------------
  * libclamav/mbox.c:	More bounce false positives removed

Wed May 12 01:27:56 CEST 2004 (tk)
----------------------------------
  * libclamav: initial PE parser/dumper (not yet activated). It will be
	       connected with UPX and WinZIP SFX unpackers and a disassembler
	       soon.

Tue May 11 02:07:55 CEST 2004 (tk)
----------------------------------
  * libclamav: scanners: revert to old X-* magic strings
  * clamd, freshclam: allow facility specification with LogFacility
  * clamd: do not scan files in /proc under Linux

Mon May 10 12:25:09 BST 2004 (njh)
----------------------------------
  * libclamav:		Don't call cli_filetype() so often since the latest